[gd_scene load_steps=3 format=3 uid="uid://tfumugscb7qp"]

[ext_resource type="Script" path="res://scripts/menus/win.gd" id="1_pynt8"]
[ext_resource type="Theme" uid="uid://ccjdu7nrsjjwa" path="res://assets/fonts/font_theme.tres" id="2_gtpdq"]

[node name="WinCanvas" type="CanvasLayer"]
layer = 3
script = ExtResource("1_pynt8")

[node name="Win" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WinText" type="RichTextLabel" parent="Win"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.0
offset_top = -62.0
offset_right = 159.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_gtpdq")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 38
bbcode_enabled = true
text = "[center]Level Complete!"

[node name="TimerText" type="RichTextLabel" parent="Win"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -131.0
offset_top = -20.0
offset_right = 108.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_gtpdq")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 30
text = "Time:"

[node name="HBoxContainer" type="HBoxContainer" parent="Win"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -149.0
offset_top = -58.0
offset_right = 143.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 0

[node name="MainButton" type="Button" parent="Win/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_gtpdq")
theme_override_font_sizes/font_size = 25
text = "Main Menu"

[node name="NextButton" type="Button" parent="Win/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_gtpdq")
theme_override_font_sizes/font_size = 25
text = "Next Level"

[connection signal="pressed" from="Win/HBoxContainer/MainButton" to="." method="_on_main_button_pressed"]
[connection signal="pressed" from="Win/HBoxContainer/NextButton" to="." method="_on_next_button_pressed"]
